# hltb

./: .editorconfig  .gitattributes  .gitignore  HLTB-Analyzer.py  HLTB-Barchartrace.py  HLTB-Sanitizer.py  HLTB-Visualizer.py  Makefile  README.md  analyze.py  debug.py  hltb_analyzer.py  hltb_barchartrace.py  hltb_sanitizer.py  hltb_visualizer.py  monthly.sql  pyproject.toml  query.py  requirements.txt  timer.py  yearly-xbox.sql
example/: HLTB_Games_example.csv
sql/: monthly.sql  retro.sql  switch.sql  yearly-xbox.sql  yearly.sql
