[project]
name = "hltb"
version = "6.1.1"
description = "HLTB Linear & Temporal Breakdown scripts"
keywords = ["data-visualization", "hltb", "howlongtobeat", "game"]
requires-python = ">=3.12"
authors = [{ name = "Vinfall" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Visualization",
    "Private :: Do Not Upload",
]

[project.urls]
Homepage = "https://github.com/Vinfall/hltb"

# Linter
[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "no-else-return",
]
