[project]
name = "hltb"
version = "8.0.0"
description = "HLTB Linear & Temporal Breakdown scripts"
keywords = ["data-visualization", "hltb", "howlongtobeat", "game"]
requires-python = ">=3.12"
authors = [{ name = "Vinfall" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: Matplotlib",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Visualization",
  "Private :: Do Not Upload",
]
dependencies = [
  "pandas>=2.2.3",
  "numpy>=2.2.1",
  "matplotlib>=3.10.0",
  "Pillow>=11.0.0",
  "imageio>=2.36.1",
  "wordcloud>=1.9.3",
]

[project.urls]
homepage = "https://github.com/Vinfall/hltb"
source = "https://github.com/Vinfall/hltb"

# Linter
[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring"]
